--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,25 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  /*animation: App-logo-spin infinite 20s linear;*/
   height: 40vmin;
   pointer-events: none;
+  margin-bottom: 0px;
+  float: none;
+  margin-right: 0px;
+  color: #7c5b5b;
+  
 }
 
 .App-header {
-  background-color: #eff0f1/*#282c34*/;
+  background-color: /*#eff0f1*/#282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: black;
+  color: white;
 }
 
 .App-link {
@@ -55,11 +60,16 @@
 .App-form {
   width: 100%;
   padding: 100px 20px;
-  margin: 20px 0;
+  margin: 15px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+}
+
+.App-table
+table, th, td {
+  border: 1px solid white;
 }
 
 @keyframes App-logo-spin {
